<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout.PersonActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="4dp"
        android:paddingLeft="4dp"
        android:paddingStart="4dp">

        <TextView
            android:id="@+id/first_name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            tools:text="Abram" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/first_name_field" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorDivider" />


        <TextView
            android:id="@+id/last_name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            tools:text="Clements" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/last_name_field" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorDivider" />

        <TextView
            android:id="@+id/gender_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            tools:text="Male" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/gender_field" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorDivider" />

        <ExpandableListView
            android:id="@+id/expandable_list_view"
            android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:dividerHeight="1dp"
            android:divider="@color/colorDivider"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>